--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Simpsons RPG</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
-</head>
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+    <script src="assets/javascript/java.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+    <link rel="shortcut icon" href ="https://vignette.wikia.nocookie.net/lossimpson/images/6/64/Destacado_icon.png/revision/latest?cb=20140201213856&path-prefix=es">
+
 <body>
-    <div class = "row">
-        <div class = "col-md-4"></div>
-    </div>
+    <div class = "titlePic"></div>  
+    <li id = "heroOne" class = "text">hp: 175</li>
+    <li id = "heroTwo">hp: 230</li>
+    <li id = "heroThree">hp: 300</li>
+    <li id = "heroFour">hp: 90</li>
+            
+  
 </body>
 </html>
