--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <title>Simpsons RPG</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-    <script src="assets/javascript/java.js"></script>
+    <script src="assets/javascript/game.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
     <link rel="shortcut icon" href ="https://vignette.wikia.nocookie.net/lossimpson/images/6/64/Destacado_icon.png/revision/latest?cb=20140201213856&path-prefix=es">
 
 <body>
     <div class = "titlePic"></div>  
-    <li id = "heroOne" class = "text">hp: 175</li>
-    <li id = "heroTwo">hp: 230</li>
-    <li id = "heroThree">hp: 300</li>
-    <li id = "heroFour">hp: 90</li>
-            
+
+    <ul>
+        <li id = "heroOne" class = "text">hp: 175</li>
+        <li id = "heroTwo">hp: 230</li>
+        <li id = "heroThree">hp: 300</li>
+        <li id = "heroFour">hp: 90</li>
+    </ul>    
   
 </body>
 </html>
