--- a/index.html
+++ b/index.html
@@ -6,19 +6,46 @@
     <title>Simpsons RPG</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="assets/javascript/game.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
     <link rel="shortcut icon" href ="https://vignette.wikia.nocookie.net/lossimpson/images/6/64/Destacado_icon.png/revision/latest?cb=20140201213856&path-prefix=es">
+    
 
 <body>
     <div class = "titlePic"></div>  
 
     <ul>
-        <li id = "heroOne" class = "text">hp: 175</li>
-        <li id = "heroTwo">hp: 230</li>
-        <li id = "heroThree">hp: 300</li>
-        <li id = "heroFour">hp: 90</li>
+        <li id = "heroOne" 
+            class = "text" 
+            onclick = "startRound(bart)" 
+            onmouseover = "textChange()"
+            onmouseout= "textRevert()"
+            >Bart</li>
+
+        <li id = "heroTwo" 
+            class = "text" 
+            onclick = "startRound(ned, characters)"
+            onmouseover = "textChange()"
+            onmouseout= "textRevert()"
+            >Flanders</li>
+
+        <li id = "heroThree" 
+            class = "text" 
+            onclick = "startRound(homer, characters)"
+            onmouseover = "textChange()"
+            onmouseout= "textRevert()"
+            >Homer</li>
+
+        <li id = "heroFour" 
+            class = "text" 
+            onclick = "startRound(maggie, characters)"
+            onmouseover = "textChange()"
+            onmouseout= "textRevert()"
+            >Maggie</li>
     </ul>    
+
+    
   
 </body>
 </html>
