--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             >Maggie</li>
     </ul>    
 
-    <div id = "battle" onclick="startFight(hero)" style="visibility: hidden;" >Attack</div>
+    <div id = "battle" onclick="startFight(fighter)" style="visibility: hidden;" >Attack</div>
     <div id = "battleBox"></div>
-    <div id = "battleBox2"></div>
+    <div id = "battleBox2">Choose a character to begin!</div>
     
   
 </body>
